[package]
name = "self-host-space"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.25"
genawaiter = { version = "0.99.1", default-features = false, features = ["futures03"] }
mio = "0.6"
pem = "1.1.0"
quiche = { git = "https://github.com/D1plo1d/quiche.git", branch = "webtransport-example" }
# quiche = { path = "../quiche/quiche/" }
ring = "0.16.20"
simple_logger = "4.0.0"
tokio = { version = "1.21.2", features = ["io-util", "time", "rt", "sync", "net", "time"] }
boring = { version = "2.0.0" }
stun = "0.4.4"
webrtc-util = "0.7.0"
async-trait = "0.1.58"
local-ip-address = { git = "https://github.com/D1plo1d/local-ip-address.git", branch="fix/linux-off-by-one" }
reqwest = { version = "0.11.13", features = ["serde_json", "json", "rustls"], default-features = false }
serde_json = "1.0.88"
serde = { version = "1.0.147", features = ["derive"] }
eyre = "0.6.8"
bs58 = "0.4.0"
jwt-simple = "0.11.2"
base64 = "0.13.1"
chrono = "0.4.23"
retry = "2.0.0"
public-ip = { git = "https://github.com/avitex/rust-public-ip.git", version = "0.2.2", default-features = false, features = ["https-rustls-native", "all-providers", "tokio-dns-resolver", "tokio-http-resolver"] }
log = "0.4.17"

[dev-dependencies]
env_logger = "0.9.3"
warp = "0.3.3"
tokio = { version = "1.21.2", features = ["full"] }
